fix: social icons not showing in contact page - footer styles cascading over contact page

--- a/src/Sass/Layouts/_footer.scss
+++ b/src/Sass/Layouts/_footer.scss
@@ -28,7 +28,7 @@
 }
 
 .footer__logo,
-.social__icons {
+.footer__social__icons {
     filter: brightness(0%) invert(100%);
 }
 
